@@ -150,95 +150,6 @@ void a_Dialog_text_window(const char *txt, const char *title)
    window->show();
 }
 
-/*
- * Dialog to find text in page.
- */
-class TextFinder : public Window {
-public:
-   TextFinder(int ww, int wh, BrowserWindow *bw);
-   BrowserWindow *bw;
-   Input *i;
-   CheckButton *cb;
-   ReturnButton *findb;
-   Button *clrb;
-   Button *clsb;
-};
-
-/*
- * Find next occurrence of input key
- */
-static void findtext_search_cb(Widget *, void *vtf)
-{
-   TextFinder *tf = (TextFinder *)vtf;
-   const char *key = tf->i->value();
-   bool case_sens = tf->cb->value();
-
-   if (key[0] != '\0')
-      a_UIcmd_findtext_search(tf->bw, key, case_sens);
-      
-}
-
-/*
- * Find next occurrence of input key
- */
-static void findtext_search_cb2(Widget *widget, void *vtf)
-{
-   /*
-    * Somehow fltk even regards the first loss of focus for the
-    * window as a WHEN_ENTER_KEY_ALWAYS event.
-    */ 
-   if (event_key() == ReturnKey)
-      findtext_search_cb(widget, vtf);
-}
-
-/*
- * Reset search state
- */
-static void findtext_clear_cb(Widget *, void *vtf)
-{
-   TextFinder *tf = (TextFinder *)vtf;
-   tf->i->value("");
-   a_UIcmd_findtext_reset(tf->bw);
-}
-
-/*
- * Construct text search window
- */
-TextFinder::TextFinder(int ww, int wh, BrowserWindow *bw) :
-                      Window(ww, wh, "unwanted title")
-{
-   int button_width = 70, ih = 35, bh = 30, gap = 10;
-
-   this->bw = bw;
-   callback(window_close_cb, this);
-
-   begin();
-    i = new Input(0, 0, ww, ih);
-    i->when(WHEN_ENTER_KEY_ALWAYS);
-    i->callback(findtext_search_cb2, this);
-
-    cb = new CheckButton(0, ih, ww, wh-ih-bh, "Case-sensitive");
-
-    findb = new ReturnButton(gap, wh-bh, button_width, bh, "Find");
-    findb->callback(findtext_search_cb, this);
-
-    clrb = new Button(button_width+2*gap, wh-bh, button_width, bh, "Clear");
-    clrb->callback(findtext_clear_cb, this);
-
-    clsb = new Button(2*button_width+3*gap, wh-bh, button_width, bh, "Close");
-    clsb->callback(window_close_cb, this);
-   end();
-
-   hotspot(i);         // place input widget beneath the cursor
-}
-
-void a_Dialog_findtext(BrowserWindow *bw)
-{
-   TextFinder *tf = new TextFinder(250, 90, bw);
-   tf->show();
-}
-
-
 /*--------------------------------------------------------------------------*/
 static int choice5_answer;
 
